TPLKEENLY-213 #resolve #comment Extra padding for items.

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -2301,6 +2301,8 @@ div.intro {
     }
     .items-row {
         border-bottom: 1px solid @color-four;
+        padding-bottom: 20px;
+        margin-bottom: 20px;
         .readmore {
             float: left;
             margin-top: 15px;
